Increase image resultion and fix style in dark mode

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -144,7 +144,7 @@ nav a:visited { color: #0066cc; }
     color: #7A7E8A;
     border-left: 2px solid #7A7E8A;
   }
-  p > code {
+  p > code, li > code {
     background-color: #252836;
     color: #B0B3BA;
   }
